finished up most of final report

--- a/assets/bibliography/2023-12-12-training-robust-networks.bib
+++ b/assets/bibliography/2023-12-12-training-robust-networks.bib
@@ -15,7 +15,7 @@
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
 
-@article{imagenet,
+@article{imagenet2014,
   author       = {Olga Russakovsky and
                   Jia Deng and
                   Hao Su and
@@ -27,7 +27,7 @@
                   Aditya Khosla and
                   Michael S. Bernstein and
                   Alexander C. Berg and
-                  Li Fei{-}Fei},
+                  Li Fei-Fei},
   title        = {ImageNet Large Scale Visual Recognition Challenge},
   journal      = {CoRR},
   volume       = {abs/1409.0575},
@@ -41,7 +41,7 @@
 }
 
 @misc{brittleness1,
-      title={Intriguing properties of neural networks}, 
+      title={Intriguing Properties of Neural Networks}, 
       author={Christian Szegedy and Wojciech Zaremba and Ilya Sutskever and Joan Bruna and Dumitru Erhan and Ian Goodfellow and Rob Fergus},
       year={2014},
       eprint={1312.6199},
