--- a/assets/bibliography/2023-12-12-training-robust-networks.bib
+++ b/assets/bibliography/2023-12-12-training-robust-networks.bib
@@ -63,3 +63,15 @@
   biburl       = {https://dblp.org/rec/journals/corr/CarliniW16a.bib},
   bibsource    = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{simonyan2014,
+    author={Karen Simoyan,
+            Andrea Vedaldi, and 
+            Zisserman, Andrew},
+    title={Deep Inside Convolutional Networks: Visualising Image Classification Models and Saliency Maps}, 
+    year={2014},
+    url={https://arxiv.org/abs/1312.6034},
+    archivePrefix={arXiv},
+    eprint={1312.6034},
+    primaryClass={cs.CV}
+}
